# test-sprite-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  README.txt  pyproject.toml
include/: atlas.hh  atlas.hpp  atlas_index.hh  bbox.hh  bridge.h  constants.hpp  core.hh  definitions.hpp  entity_layout.hpp  entity_registry.hh  file_mapping.hh  input.hh  mapped_view.hh  memory.hh  memory_map.hpp  physics.hh  render_bridge.hh  render_bridge.hpp  renderer.hpp  scene_population.hh  scene_registry.hh  sprite.h  sprite.hh  sprite.hpp  sprite_bank.hpp  sprites.h  transform_registry.h  transform_registry.hpp
pipeline/: __init__.py  compiler.py  core.py  interpreter.py  linker.py
scripts/: bake_sprite.py
src/: entity_registry.cc  main.c  main.cpp  main.mm  render_bridge.cc  render_bridge.cpp  renderer.cpp  renderer.swift  scene_registry.cc  shader.metal  test_frontend.swift
src/assets/: asset_constants.hh  atlas.cc  atlas.hh  sprite.cc  sprite.hh
src/core/: core.hh  input.hh  mapped_view.hh  memory.hh  renderer.cpp
src/graphics/: display_constants.hh  graphics_types.cc  graphics_types.hh  metal_bridge.cc  metal_bridge.hh  render_bridge.cc  render_bridge.hh  render_constants.hh  shader.metal  visual_types.hh
src/math/: bbox.hh  utils.hh
src/physics/: physics.cc  physics.hh  physics_types.hh  spatial_grid.hh
src/platform/: SCAppDelegate.h  SCAppDelegate.hh  SCAppDelegate.mm  SCStage.h  SCStage.hh  SCStage.mm  SCViewport.mm  main.mm
src/registry/: entity_registry.cc  entity_registry.hh
src/simulation/: physics.cc  physics.hh  physics_types.hh  spatial_grid.cc  spatial_grid.hh  world.cc  world.hh
tests/: test_atlas.cpp  test_baker.c  test_baker.cpp
