[project]
name = "sprite-baker"
version = "0.1.0"
description = "Bake data into a custom sprite file."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["I"]
