[project]
name = "pipeline-tools"
version = "0.2.1"
description = "Compile artworks into sprites, and preview them."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
    "ruff==0.15.5",
    "ty==0.0.21",
]

[project.scripts]
bake = "pipeline.compiler:main"
preview = "pipeline.interpreter:main"

[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["I"]
