[project]
name = "test-sprite-engine"
version = "0.5.1"
description = "Compile artworks into sprites, and preview them."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[project.scripts]
bake = "pipeline.compiler:main"
preview = "pipeline.interpreter:main"

[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["I"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "venv",
]
